tolk-tester/tests/invalid-declaration/err-1683.tolk
global mulDivMod: int;

/**
@compilation_should_fail
@stderr global mulDivMod: int;
@stderr redefinition of built-in symbol
 */
